--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,10 @@
     "require": {
         "php": ">=7.2",
         "cakephp/cakephp": "^4.0",
-        "fm-labs/cakephp-cupcake": "dev-master",
-        "fm-labs/cakephp-tree": "dev-master"
+        "fm-labs/cakephp-cupcake": "^0.5",
+        "fm-labs/cakephp-tree": "^0.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
     },
     "autoload": {
         "psr-4": {
