--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "require": {
         "php": ">=7.2",
         "cakephp/cakephp": "^4.0",
-        "fm-labs/cakephp-cupcake": "^0.5",
-        "fm-labs/cakephp-tree": "^0.2"
+        "fm-labs/cakephp-cupcake": ">=0.6",
+        "fm-labs/cakephp-tree": ">=0.2"
     },
     "require-dev": {
     },
