--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "php": ">=7.2",
         "cakephp/cakephp": "^4.0",
         "fm-labs/cakephp-cupcake": ">=0.6",
+        "fm-labs/cakephp-settings": "^1.0.0",
         "fm-labs/cakephp-tree": ">=0.2"
     },
     "require-dev": {
